# justwatch

./: .dockerignore  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: docker-build.yml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/app/api/: justwatch.py
backend/app/models/: justwatch_models.py
backend/app/services/: currency_converter.py  justwatch_service.py
frontend/: .dockerignore  Dockerfile  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/lib/api/: justwatch.ts
frontend/src/lib/components/: SearchPage.svelte  TitleDetail.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
frontend/src/routes/search/: +page.svelte
frontend/src/routes/title/[id]/: +page.svelte
