[project]
name = "backend"
version = "0.1.0"
description = "JustWatch Search API - FastAPI backend for searching movies and TV shows"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.123.9",
    "uvicorn>=0.38.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.5",
]
